--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 server:
   port: 8800
 
-eureka.client.register-with-eureka: false
-eureka.client.fetch-registry: false
+eureka.client.register-with-eureka: true
+eureka.client.fetch-registry: true
 
 logging.level.com.netflix.eureka: OFF
 logging.level.com.netflix.discovery: OFF
+
+# enabling eureka service registry 
